Closed Bug 1585067 Opened 6 years ago Closed 6 years ago

Fix usage of nsIDocShellTreeItem in WarnIfSandboxIneffective

Categories

(Core :: DOM: Navigation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla73
Fission Milestone M6
Tracking Status
firefox73 --- fixed

People

(Reporter: djvj, Assigned: djvj)

References

(Blocks 1 open bug)

Details

(Whiteboard: [rm-docshell-tree-item:simple])

Attachments

(1 file)

https://searchfox.org/mozilla-central/rev/153feabebc2d13bb4c29ef8adf104ec1ebd246ae/dom/base/Document.cpp#2902

This code pulls out the parent item and grand-parent item from the tree, and checks for existence for each. This part is simple to fix with BrowsingContext.

The subsequent code checks whether the parent is the same origin as the child. This can be checked by using nsIDocShellTreeItem and checking for a non-null parent - which would imply that the parent was in-process, which would imply same-origin. The subsequent code passes the parent document to another function, but this is OK as we have already confirmed that the parent document is same-origin, so it should be in-process by definition.

Fission Milestone: --- → M5
Priority: -- → P2
Whiteboard: [rm-docshell-tree-item:simple]
Fission Milestone: M5 → Future

Kannan says replacing nsIDocShellTreeItem calls should block enabling Fission in Nightly (M6).

Fission Milestone: Future → M6
Assignee: nobody → kvijayan
Pushed by kvijayan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/175e56831f47 Fix usage of nsIDocShellTreeItem in WarnIfSandboxIneffective. r=kmag
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: