Bug 1585067 - Fix usage of nsIDocShellTreeItem in WarnIfSandboxIneffective. r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D55544

--HG--
extra : moz-landing-system : lando